@@ -2,6 +2,7 @@ BUGS
 CHANGES
 MANIFEST
 README
+README.win32
 SIGNATURE
 LICENSE
 TODO
