@@ -13,19 +13,20 @@ not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
 
-SHA1 f385ee630fd9153ce3f57ce6b2e08765e02388bd BUGS
-SHA1 4d148b4a2705522201314cd143816a0a41246878 CHANGES
-SHA1 adbaf1438d86810b9f33312ce4625e634fb3d6f7 Irrlicht.xs
+SHA1 1a9c22e95260f867bf8b1319f2df8e8443243d3e BUGS
+SHA1 dece89c9aa2d40431f7bda3816db03ee73122af7 CHANGES
+SHA1 978fd035e5414b323e68d54a2408ca01461bc359 Irrlicht.xs
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
-SHA1 d557bf487f5157513bd030ba39f0a51729bd6f1a MANIFEST
-SHA1 74034c51386afea8529dbc67314eb46e0c884802 META.yml
+SHA1 9f6bb4ca9ba8e4314bbb360bd59cb45c7fc4ef81 MANIFEST
+SHA1 ac781b7075f9abfd620b2e274712df1aded61c32 META.yml
 SHA1 f3a03df77ae5278ee1e3212f3eafd4f2dd48df5d Makefile.PL
-SHA1 9102cf19041123822cd611c9ee0a586f385a4972 NEW
-SHA1 43e646710dcc468f1dcd1a180891f75b6f3b2fee README
-SHA1 35d9fced358de3d95b9060ec0d8a26c0e98c2f5e TODO
-SHA1 6e2693d1100441762afdd8ac89e9a7229e2836a0 examples/lib/Games/Irrlicht/TechDemo.pm
+SHA1 f8756543c5ddcba3b0b76fdec006a71da3b2036a NEW
+SHA1 e6bcc196578df5fd5f17a679f4c88951d84622c8 README
+SHA1 b2a6f6d19f99ef83abfa7d69aa8b2137454040f6 README.win32
+SHA1 354e9f232a8025bb17d40c14e0d832abcc7ca70c TODO
+SHA1 46cc9c0d7b491c19bbb490f12a882b541e510a22 examples/lib/Games/Irrlicht/TechDemo.pm
 SHA1 92103edbc56d4e53f402b8ed9e24c4460cb40f63 examples/techdemo.pl
-SHA1 34acd1620cc66850f402f5c2bc6d536d64be044f lib/Games/Irrlicht.pm
+SHA1 0657bb443b4965595f004d28fa3076393771544c lib/Games/Irrlicht.pm
 SHA1 e52a24d50a6d086015f00f8ac8917e45caac3d6c lib/Games/Irrlicht/EventHandler.pm
 SHA1 da254802c350218f96448f2dd9e37cb7e3351136 lib/Games/Irrlicht/Group.pm
 SHA1 346e05d4459195ba647d2be6f48d87b175823526 lib/Games/Irrlicht/Thingy.pm
@@ -34,22 +35,22 @@ SHA1 244b79828de68c21e44940d471de20411b3e29d1 t/Games/Irrlicht/MyApp.pm
 SHA1 534f4eac0f901f6db0d8896fefd4bef7b1a12e5c t/config/client.cfg
 SHA1 b0fe0ebd9a7aff893c75ca81f81a34f1d3963713 t/config/test.cfg
 SHA1 8c631a050bb8db45f440cd5a60129b5b6b90d05c t/config/test2.cfg
-SHA1 6960886e599c8baaf1fa66613b9efc372d3426bf t/irrlichtpm.t
+SHA1 f3d32e8f0820eb580deb22b12bd56a3a2d294d36 t/irrlichtpm.t
 SHA1 a14f9fd152f1454ddef2b1c3ce0f003ac9a7afcd t/media/test.zip
-SHA1 44eb9f45aa449d6b42c4abb2756bf62d2ce67699 t/mycfg.t
-SHA1 8bf84ab0d39359ed8a864b8c7128950618ac8b42 t/myirrlicht.t
-SHA1 7c963266c5be9ab51029650635031e0e02185417 t/myopt.t
+SHA1 c4604e8fb7e8340f0c477ab51a477fc38053d528 t/mycfg.t
+SHA1 1b4dd2e7081f357489831e9b20b889aa4f83ea66 t/myirrlicht.t
+SHA1 3281c5c4aba00ca437da343622faec9a7f3905d0 t/myopt.t
 SHA1 458d53878668b2113196ed59e0b1bdcda44bcb98 t/thingy.t
 SHA1 e07ff63a4ee4a2186bbceae8379aee252eabc9a4 t/timer.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.2-rc1-SuSE (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBQEHm4XcLPEOTuEwVAQHkggf8CThYODQhavg/s88t7LJWZxyAswew3UJQ
-nsHbyAesLts8yKDlh+yD1cE41RffLJmJKMMB9K7Ib/EfU0Gj/A6bhq4hTCjSfHtT
-SVgblcnr6pWl1O3SNLcXvAwas4K5gT2f3b3jIH3qQnRaDTHXAHylhr7/AXXRTDfP
-KUoftKg68GcrO12+rdHXAob6LlebpZccJ28WbpJjo1lSqtd+O8QPHzqThsCJBCxN
-lTJ2weL0WU16UwF7sZVpy7e5lRNhlNZeQ1H378Beu4V/HZgml+y00XKo9Hki1FqT
-0UAMpBYTwNCGx5ewUyJYkEmoI6vBuSLuUqEXXgTTjoJpUA6ERIZeWw==
-=GSCZ
+iQEVAwUBQEudJXcLPEOTuEwVAQGhFwf8D+RWJ2L1PwB8wTHyx9/nTMndN94V6U82
+Cp5olVP9n/ICen8eCBonlT9gEJRNPiIzH4xiIfpBIjEkkhT4vRjbfugRo0CSzx9M
+/mb6l29hBx6ORnrvo7mZBjcgId1wvvjwf9GETg/IzzUW2EVA827a/dqj2yEOfcAc
+10YyrKztqTAzoF0ZEDR1rlSy8Wq4Q2x4Dqf9HZQ97LJJOmRCQ5pE70jJ24298LBk
+SqdusEMgrGGzNay+Yxx9CBLfZKUCgyQOmw2fHpysb7CZkSQgACpmnLTwH1GVHbMn
+nMlX8FCbd/7VvhEjKu+IgHl9Kcf9YhWPff5oOWoByJTaMGB15KJvjA==
+=3rJw
 -----END PGP SIGNATURE-----
