@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 
-use Test::More;
+use Test::More tests => 7;
 use strict;
 
 BEGIN
@@ -10,18 +10,22 @@ BEGIN
   use lib '../blib/lib';
   use lib '../blib/arch';
   chdir 't' if -d 't';
-  plan tests => 5;
   use_ok ('Games::Irrlicht');
   }
 
 can_ok ('Games::Irrlicht', qw/ 
   new _next_frame _init
   hide_mouse_cursor
-  addCameraSceneNodeFPS 
-  getPrimitiveCountDrawn
+
+  getIrrlichtDevice
+  getFileSystem
+  getGUIEnvironment
+  getSzeneManager
+  getVideoDriver
+  
   /);
 
-my $app = Games::Irrlicht->new();
+my $app = Games::Irrlicht->new( disable_log => 1 );
 
 is (ref($app), 'Games::Irrlicht');
 
@@ -31,14 +35,38 @@ while ($i++ < 70)
   $app->_next_frame();
   }
 
-is ($app->getPrimitiveCountDrawn(), 0, 'primitives drawn');
+#############################################################################
+# IrrlichDevice
 
-$app->addCameraSceneNodeFPS();
+my $device = $app->getIrrlichtDevice();
 
-is ($app->addZipFileArchive('media/test.zip'), 1,
+is ($device->setVisible(0), undef, 'set cursor to invisible');
+
+#############################################################################
+# VideoDriver
+
+my $driver = $app->getVideoDriver();
+
+is ($driver->getPrimitiveCountDrawn(), 0, 'no primitives drawn yet');
+
+#############################################################################
+# FileSystem
+
+my $filesystem = $app->getFileSystem();
+
+is ($filesystem->addZipFileArchive('media/test.zip'), 1,
   'Could add zip file');
 
-# debug XXX TODO (this actually works)
-#$app->addZipFileArchive('../examples/media/map-20kdm2.pk3');
-#$app->loadBSP ("20kdm2.bsp");
+#############################################################################
+# SzeneManager
+
+my $szmgr = $app->getSzeneManager();
+
+is ($szmgr->addCameraSceneNodeFPS(), 1,
+  'Could add FPS camera');
+
+#############################################################################
+# GUIEnvironment
+
+my $gui = $app->getGUIEnvironment();
 
